--- a/index.html
+++ b/index.html
@@ -273,14 +273,16 @@
         import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-storage.js";
 
         // 🔧 ИСПРАВЛЕНИЕ #1: Добавлены переносы строк
-        const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_PROJECT_ID.appspot.com",
-            messagingSenderId: "SENDER_ID",
-            appId: "APP_ID"
-        };
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyDXsvsaG8IdcjZv4iG4WHjPneGvcxywuTk",
+  authDomain: "bobba-591c5.firebaseapp.com",
+  projectId: "bobba-591c5",
+  storageBucket: "bobba-591c5.firebasestorage.app",
+  messagingSenderId: "839501020120",
+  appId: "1:839501020120:web:0e58d4759785a1fadfd0ad",
+  measurementId: "G-C3D5TB22F0"
+};
 
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
