--- a/index.html
+++ b/index.html
@@ -326,16 +326,16 @@
 
     <script>
         // 🔧 КОНФИГУРАЦИЯ FIREBASE (ЗАМЕНИТЕ НА ВАШИ ДАННЫЕ)
-        const firebaseConfig = {
-            apiKey: "YOUR_API_KEY_HERE", // Получите в Firebase Console
-            authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_PROJECT_ID.appspot.com",
-            messagingSenderId: "YOUR_SENDER_ID",
-            appId: "YOUR_APP_ID",
-            // Для России используйте регионаl endpoint:
-            // region: "europe-west1" // или другой ближайший регион
-        };
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyDXsvsaG8IdcjZv4iG4WHjPneGvcxywuTk",
+  authDomain: "bobba-591c5.firebaseapp.com",
+  projectId: "bobba-591c5",
+  storageBucket: "bobba-591c5.firebasestorage.app",
+  messagingSenderId: "839501020120",
+  appId: "1:839501020120:web:0e58d4759785a1fadfd0ad",
+  measurementId: "G-C3D5TB22F0"
+};
 
         // 🔧 РЕЗЕРВНЫЕ CDN ДЛЯ РОССИИ И ДРУГИХ СТРАН
         const CDN_FALLBACKS = {
