--- a/index.html
+++ b/index.html
@@ -302,14 +302,16 @@
          * Получите их в Firebase Console → Project Settings → General
          * ------------------------------------------------------------------
          */
-        const firebaseConfig = {
-            apiKey: "YOUR_API_KEY_HERE",
-            authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_PROJECT_ID.appspot.com",
-            messagingSenderId: "YOUR_SENDER_ID",
-            appId: "YOUR_APP_ID"
-        };
+
+const firebaseConfig = {
+  apiKey: "AIzaSyDXsvsaG8IdcjZv4iG4WHjPneGvcxywuTk",
+  authDomain: "bobba-591c5.firebaseapp.com",
+  projectId: "bobba-591c5",
+  storageBucket: "bobba-591c5.firebasestorage.app",
+  messagingSenderId: "839501020120",
+  appId: "1:839501020120:web:0e58d4759785a1fadfd0ad",
+  measurementId: "G-C3D5TB22F0"
+};
 
         // Initialize Firebase
         const app = initializeApp(firebaseConfig);
